# opstack-tools

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_add_script_content_to_tools.py  002_add_script_content_to_tool_versions.py  003_add_cascade_delete_to_foreign_keys.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DeleteConfirmModal.tsx  ErrorBoundary.tsx  JsonSchemaEditor.tsx  Layout.tsx  MonacoEditor.tsx  Pagination.tsx  SearchBar.tsx  ToolCard.tsx  ToolForm.tsx  ToolTestPanel.tsx
frontend/src/pages/: ToolCreate.tsx  ToolDetail.tsx  ToolEdit.tsx  ToolList.tsx
frontend/src/services/: categoryApi.ts  toolApi.ts
frontend/src/types/: tool.ts
scripts/: seed_all_tools.py  seed_aws_tools.py  seed_categories.py  seed_db_tools.py  seed_java_tools.py  seed_k8s_tools.py
specs/001-llm-tool-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-tool-management/checklists/: requirements.md
specs/001-llm-tool-management/contracts/: openapi-llm.yaml  openapi-tools.yaml
specs/002-ops-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ops-tools/checklists/: requirements.md
specs/002-ops-tools/contracts/: aws-tools.yaml  db-tools.yaml  java-tools.yaml  k8s-tools.yaml
src/aiops_tools/: __init__.py  main.py
src/aiops_tools/core/: config.py  database.py  (+2 more)
(+40 files in other folders)
